--- a/grid.css
+++ b/grid.css
@@ -50,6 +50,16 @@
   margin-left: 20px;
 }
 
+@media (max-width: 480px) {
+  .float-left,
+  .float-right {
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .wrap {
   max-width: 940px;
   margin-left: auto;
